Update combate section
Atualização da seção de combate.

--- a/FichaVirtual/css/main.css
+++ b/FichaVirtual/css/main.css
@@ -62,3 +62,8 @@ textarea::-webkit-scrollbar-thumb {
     background-color: rgb(141, 140, 140);
     border-radius: 10px;
 }
+
+/*Textareas da seção de combate*/
+.arma-textarea {
+    
+}
