--- a/views/lista-fichas.ejs
+++ b/views/lista-fichas.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/head') %>
 
-<h1>Isso vai ser o menu</h1>
+<h1>Isso vai ser uma página com as fichas criadas pelo usuário</h1>
 
 <%- include('./partials/footer') %>
