--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/head') %>
 
-<h1>Isso vai ser o menu</h1>
+<h1>Isso vai ser a página com mais informações sobre o projeto</h1>
 
 <%- include('./partials/footer') %>
