Mudança no head e nas renderizações; mudança de lugar da tag body e correção ortográfica em skills

--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/head') %>
 
+<body>
+
 <h1>Isso vai ser uma página para fins de contato com o dev do projeto (vulgo, eu)</h1>
 
 <%- include('./partials/footer') %>
