--- a/views/criar.ejs
+++ b/views/criar.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/head') %>
 
+<body>
+
 <%- include('./partials/ficha/caracteristicas/informacoes') %>
 <%- include('./partials/ficha/caracteristicas/atributos') %>
 <%- include('./partials/ficha/caracteristicas/caracteristicas') %>
