--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/head') %>
 
-<h1>Isso vai ser o menu</h1>
+<body>
+
+<h1>vamo centralizar essa div vamo que vamo</h1>
 
 <%- include('./partials/footer') %>
