--- a/views/lista-fichas.ejs
+++ b/views/lista-fichas.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/head') %>
 
+<body>
+
 <h1>Isso vai ser uma página com as fichas criadas pelo usuário</h1>
 
 <%- include('./partials/footer') %>
