--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/head') %>
 
+<body>
+
 <h1>Isso vai ser a página com mais informações sobre o projeto</h1>
 
 <%- include('./partials/footer') %>
