--- a/views/ficha.ejs
+++ b/views/ficha.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/head') %>
 
+<body>
+    
 <h1>Isso vai ser uma página mostrando uma ficha já criada pelo usuário (tipo a que tem em /criar).</h1>
 <h2>Para isso, terei que implementar um sistema de id; por exemplo, essa ficha teria o id <strong> <%= id %> </strong> </h2>
 
