--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,17 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ficha CoC</title>
+    <title> <%- title %> </title>
     <link rel="icon" type="image/x-icon" href=".favicon.ico">
     <!--Importing bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/stylesheets/style.css" rel="stylesheet">
-    <script src="/javascripts/script.js" defer></script>
-    <script src="/javascripts/hp.js" defer></script>
-    <script src="/javascripts/mp.js" defer></script>
-    <script src="/javascripts/sanidade.js" defer></script>
-    <script src="/javascripts/skills.js" defer></script>
+
+    <% if (styles && styles.length) { %>
+        <% styles.forEach(style => { %>
+          <link rel="stylesheet" href="<%= style %>" />
+        <% }) %>
+      <% } %>
+
+      <% if (scripts && scripts.length) { %>
+        <% scripts.forEach(script => { %>
+          <script src="<%= script %>" defer></script>
+        <% }) %>
+      <% } %>
 
 </head>
-
-<body>
