--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,16 @@
 <%- include('./partials/head') %>
 
-<body>
+<body class="d-flex align-items-center justify-content-center vh-100 bg-image text-white" style="overflow: hidden;">
 
-<h1>vamo centralizar essa div vamo que vamo</h1>
+  <div class="text-center">
+    <h2 class="mb-4">Saudações!<br>Aqui você pode...</h2>
+
+    <div class="btn-group-vertical gap-2">
+      <a href="/criar" class="btn btn-primary" style="background-color:#3a5f81; border-color: #3a5f81;">Criar ficha</a>
+      <a href="/fichas" class="btn btn-secondary" style="background-color: #4a4a4a; border-color: #4a4a4a;">Carregar fichas</a>
+      <a href="/sobre" class="btn btn-success" style="background-color: #3a815a; border-color: #3a815a;">Sobre</a>
+      <a href="/contato" class="btn btn-danger" style="background-color: #813a3a; border-color: #813a3a;">Contato</a>
+    </div>
+  </div>
 
 <%- include('./partials/footer') %>
