--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -1,7 +1,11 @@
 <%- include('./partials/head') %>
 
-<body>
+<body class="d-flex align-items-center justify-content-center vh-100 bg-image-old-paper" style="overflow: hidden;">
 
-<h1>Isso vai ser uma página para fins de contato com o dev do projeto (vulgo, eu)</h1>
+    <div class="container text-center">
+        <h1 class="display-4">Infelizmente, ninguém lhe responde...</h1>
+        <p class="lead">Que tipo de ser você está tentando contatar, afinal?</p>
+        <a href="/" class="btn btn-primary" style="background-color:#3a5f81; border-color: #3a5f81;">Voltar para o menu</a>
+    </div>
 
 <%- include('./partials/footer') %>
