--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/head') %>
 
-<body class="d-flex align-items-center justify-content-center vh-100 bg-image text-white" style="overflow: hidden;">
+<body class="d-flex align-items-center justify-content-center vh-100 bg-image-menu text-white" style="overflow: hidden;">
 
   <div class="text-center">
     <h2 class="mb-4">Saudações!<br>Aqui você pode...</h2>
