--- a/views/lista-fichas.ejs
+++ b/views/lista-fichas.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/head') %>
 
-<body>
+<body class="d-flex align-items-center justify-content-center vh-100 bg-image-old-paper" style="overflow: hidden;">
 
 <h1>Isso vai ser uma página com as fichas criadas pelo usuário</h1>
 
