--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -1,7 +1,11 @@
 <%- include('./partials/head') %>
 
-<body>
+<body class="d-flex align-items-center justify-content-center vh-100 bg-image-old-paper" style="overflow: hidden;">
 
-<h1>Isso vai ser a página com mais informações sobre o projeto</h1>
+    <div class="container text-center">
+        <h1 class="display-4">O caminho em frente parece perigoso...</h1>
+        <p class="lead">Talvez você encontre algumas informações sobre o projeto aqui no futuro!</p>
+        <a href="/" class="btn btn-primary" style="background-color:#3a5f81; border-color: #3a5f81;">Voltar para o menu</a>
+    </div>
 
 <%- include('./partials/footer') %>
