Mudança de aparência da ficha

--- a/views/criar.ejs
+++ b/views/criar.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/head') %>
 
-<body class="bg-image-vintage-grunge">
+<body class="bg-image-ficha">
 
 <%- include('./partials/ficha/caracteristicas/informacoes') %>
 <%- include('./partials/ficha/caracteristicas/atributos') %>
