--- a/views/partials/ficha/caracteristicas/atributos.ejs
+++ b/views/partials/ficha/caracteristicas/atributos.ejs
@@ -7,8 +7,8 @@
 
     <div class="col 12 col-md-6">
 
-        <table class="table">
-            <thead>
+        <table class="table bg-transparent">
+            <thead class="bg-transparent">
                 <tr>
                     <th>Atributo</th>
                     <th>Normal</th>
@@ -16,7 +16,7 @@
                     <th>Extremo</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="bg-transparent">
                 <tr>
                     <td>FOR</td>
                     <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-for"> </th>
