--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,6 +23,13 @@ body {
   background-repeat: no-repeat;
 }
 
+.bg-image-ficha {
+  background-image: url('/images/simple-old-paper-texture-3.jpeg');
+  background-repeat: repeat-y;     
+  background-size: 100% auto;      
+  background-position: top center; 
+}
+
 /*botões do menu*/
 
 .btn {
@@ -38,6 +45,7 @@ body {
 .table {
   text-align: center;
   border-collapse: collapse;
+  background-color: transparent;
 }
 
 .table th,
@@ -45,11 +53,13 @@ td {
   border: 1px solid black;
   padding: 10px;
   text-align: center;
+  background-color: transparent;
 }
 
 .table input {
   text-align: center;
   width: 50px;
+  background-color: transparent;
 }
 
 
@@ -57,6 +67,7 @@ td {
 
 #max-san-display {
   width: 50px;
+  background-color: transparent;
 }
 
 
@@ -66,6 +77,7 @@ td {
   max-height: 300px;
   overflow-y: auto;
   margin-bottom: 10px;
+  background-color: transparent;
 }
 
 
@@ -76,6 +88,7 @@ td {
   word-wrap: break-word;
   resize: none;
   height: 300px;
+  background-color: transparent;
 }
 /*barra de scroll*/
 textarea::-webkit-scrollbar {
@@ -96,24 +109,34 @@ textarea::-webkit-scrollbar-thumb {
   width: 200px;
   height: 32px;
   resize: none;
+  background-color: transparent;
 }
 
 /*tabela de combate*/
 #tabela-comb {
   overflow-x: auto;
   min-width: 600px;
+  background-color: transparent;
 }
 
 /*textareas*/
 .form-control {
   resize: none;
+  background-color: transparent;
+  border-color: black;
 }
 
 /*Tamanho dos inputs de dinheiro e nivel de gasto*/
 #nivel-gasto {
   width: auto;
+  background-color: transparent;
 }
 
 #persona-din {
   width: auto;
+  background-color: transparent;
+}
+
+.table>:not(caption)>*>* {
+  background-color: transparent;
 }
