Inicio de implementação do metodo POST e adição de botão de salvamento

--- a/views/criar.ejs
+++ b/views/criar.ejs
@@ -2,6 +2,8 @@
 
 <body class="bg-image-ficha">
 
+    <form method="POST" action="/criar">
+
 <%- include('./partials/ficha/caracteristicas/informacoes') %>
 <%- include('./partials/ficha/caracteristicas/atributos') %>
 <%- include('./partials/ficha/caracteristicas/caracteristicas') %>
@@ -28,5 +30,7 @@
 <%- include('./partials/ficha/economia') %>
 
 <%- include('./partials/ficha/notas') %>
+
+</form>
 
 <%- include('./partials/footer') %>
