--- a/views/partials/ficha/caracteristicas/informacoes.ejs
+++ b/views/partials/ficha/caracteristicas/informacoes.ejs
@@ -3,7 +3,14 @@
 
     <br>
     <!-- Título da Ficha -->
-    <h2>Investigador</h2>
+    <div class="row align-items-center">
+        <div class="col">
+            <h2>Investigador</h2>
+        </div>
+        <div class="col text-center my-4">
+            <button type="submit" class="btn btn-primary" style="background-color:#3a5f81; border-color: #3a5f81;">Salvar Ficha</button>
+        </div>
+    </div>
     <br>
 
     <div class="persona-info">
