Correlação entre schema e propriedade name dos elementos da ficha; modificação de funções para o uso de keys (habilidades); correção da função de VerificaHp e VerificaMp; remoção de script.js (arquivo vazio)

--- a/views/partials/ficha/caracteristicas/atributos.ejs
+++ b/views/partials/ficha/caracteristicas/atributos.ejs
@@ -19,49 +19,49 @@
             <tbody class="bg-transparent">
                 <tr>
                     <td>FOR</td>
-                    <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaMov()" id="valor-for"> </th>
+                    <td> <input type="number" name="caracteristicas.status.FOR" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaMov()" id="valor-for"> </th>
                     <td class="valor-bom"></td>
                     <td class=valor-extremo></td>
                 </tr>
                 <tr>
                     <td>CON</td>
-                    <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaHpMax()" id="valor-con"> </td>
+                    <td> <input type="number" name="caracteristicas.status.CON" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaHpMax()" id="valor-con"> </td>
                     <td class="valor-bom"></td>
                     <td class=valor-extremo></td>
                 </tr>
                 <tr>
                     <td>DES</td>
-                    <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaMov()" id="valor-des"> </td>
+                    <td> <input type="number" name="caracteristicas.status.DES" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaMov()" id="valor-des"> </td>
                     <td class="valor-bom"></td>
                     <td class=valor-extremo></td>
                 </tr>
                 <tr>
                     <td>INT</td>
-                    <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-int"> </td>
+                    <td> <input type="number" name="caracteristicas.status.INT" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-int"> </td>
                     <td class="valor-bom"></td>
                     <td class=valor-extremo></td>
                 </tr>
                 <tr>
                     <td>TAM</td>
-                    <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaHpMax(); CalculaMov()" id="valor-tam"> </td>
+                    <td> <input type="number" name="caracteristicas.status.TAM" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaHpMax(); CalculaMov()" id="valor-tam"> </td>
                     <td class="valor-bom"></td>
                     <td class=valor-extremo></td>
                 </tr>
                 <tr>
                     <td>POD</td>
-                    <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaMpMax()" id="valor-pod"> </td>
+                    <td> <input type="number" name="caracteristicas.status.POD" placeholder="50" min="0" oninput="AtualizaAtributo(this); CalculaMpMax()" id="valor-pod"> </td>
                     <td class="valor-bom"></td>
                     <td class=valor-extremo></td>
                 </tr>
                 <tr>
                     <td>APA</td>
-                    <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-apa"> </td>
+                    <td> <input type="number" name="caracteristicas.status.APA" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-apa"> </td>
                     <td class="valor-bom"></td>
                     <td class=valor-extremo></td>
                 </tr>
                 <tr>
                     <td>EDU</td>
-                    <td> <input type="number" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-edu"> </td>
+                    <td> <input type="number" name="caracteristicas.status.EDU" placeholder="50" min="0" oninput="AtualizaAtributo(this)" id="valor-edu"> </td>
                     <td class="valor-bom"></td>
                     <td class=valor-extremo></td>
                 </tr>
