--- a/views/partials/ficha/combate/armas.ejs
+++ b/views/partials/ficha/combate/armas.ejs
@@ -32,37 +32,37 @@
                             <td>---</td>
                         </tr>
                         <tr>
-                            <td><textarea name="nome-arma1" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="normal-arma1" id="normal-arma1" min="0"></td>
-                            <td><input type="number" name="bom-arma1" id="bom-arma1" min="0"></td>
-                            <td><input type="number" name="extremo-arma1" id="extremo-arma1" min="0"></td>
-                            <td><textarea name="dano-arma1" id="dano-arma1" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="arma1-ats" id="arma1-ats" min="0"></td>
-                            <td><input type="number" name="arma1-alc" id="arma1-alc" min="0"></td>
-                            <td><input type="number" name="arma1-pente" id="arma1-pente" min="0"></td>
-                            <td><input type="number" name="arma1-falha" id="arma1-falha" min="0"></td>
+                            <td><textarea name="combate.arma1.nome" class="arma-textarea"></textarea></td>
+                            <td><input type="number" name="combate.arma1.valor" id="normal-arma1" min="0"></td>
+                            <td id="bom-arma1" min="0"></td>
+                            <td id="extremo-arma1" min="0"></td>
+                            <td><textarea name="combate.arma1.dano" id="dano-arma1" class="arma-textarea"></textarea></td>
+                            <td><input type="number" name="combate.arma1.ataques" id="arma1-ats" min="0"></td>
+                            <td><input type="number" name="combate.arma1.alcance" id="arma1-alc" min="0"></td>
+                            <td><input type="number" name="combate.arma1.pente" id="arma1-pente" min="0"></td>
+                            <td><input type="number" name="combate.arma1.falha" id="arma1-falha" min="0"></td>
                         </tr>
                         <tr>
-                            <td><textarea name="arma2" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="normal-arma2" id="normal-arma2" min="0"></td>
-                            <td><input type="number" name="bom-arma2" id="bom-arma2" min="0"></td>
-                            <td><input type="number" name="extremo-arma2" id="extremo-arma2" min="0"></td>
-                            <td><textarea name="dano-arma2" id="dano-arma2" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="arma2-ats" id="arma2-ats" min="0"></td>
-                            <td><input type="number" name="arma2-alc" id="arma2-alc" min="0"></td>
-                            <td><input type="number" name="arma2-pente" id="arma2-pente" min="0"></td>
-                            <td><input type="number" name="arma2-falha" id="arma2-falha" min="0"></td>
+                            <td><textarea name="combate.arma2.nome" class="arma-textarea"></textarea></td>
+                            <td><input type="number" name="combate.arma2.valor" id="normal-arma2" min="0"></td>
+                            <td id="bom-arma2" min="0"></td>
+                            <td id="extremo-arma2" min="0"></td>
+                            <td><textarea name="combate.arma2.dano" id="dano-arma2" class="arma-textarea"></textarea></td>
+                            <td><input type="number" name="combate.arma2.ataques" id="arma2-ats" min="0"></td>
+                            <td><input type="number" name="combate.arma2.alcance" id="arma2-alc" min="0"></td>
+                            <td><input type="number" name="combate.arma2.pente" id="arma2-pente" min="0"></td>
+                            <td><input type="number" name="combate.arma2.falha" id="arma2-falha" min="0"></td>
                         </tr>
                         <tr>
-                            <td><textarea name="arma3" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="normal-arma3" id="normal-arma3" min="0"></td>
-                            <td><input type="number" name="bom-arma3" id="bom-arma3" min="0"></td>
-                            <td><input type="number" name="extremo-arma3" id="extremo-arma3" min="0"></td>
-                            <td><textarea name="dano-arma3" id="dano-arma3" class="arma-textarea"></textarea></td>
-                            <td><input type="number" name="arma3-ats" id="arma3-ats" min="0"></td>
-                            <td><input type="number" name="arma3-alc" id="arma3-alc" min="0"></td>
-                            <td><input type="number" name="arma3-pente" id="arma3-pente" min="0"></td>
-                            <td><input type="number" name="arma3-falha" id="arma3-falha" min="0"></td>
+                            <td><textarea name="combate.arma3.nome" class="arma-textarea"></textarea></td>
+                            <td><input type="number" name="combate.arma3.valor" id="normal-arma3" min="0"></td>
+                            <td id="bom-arma3" min="0"></td>
+                            <td id="extremo-arma3" min="0"></td>
+                            <td><textarea name="combate.arma3.dano" id="dano-arma3" class="arma-textarea"></textarea></td>
+                            <td><input type="number" name="combate.arma3.ataques" id="arma3-ats" min="0"></td>
+                            <td><input type="number" name="combate.arma3.alcance" id="arma3-alc" min="0"></td>
+                            <td><input type="number" name="combate.arma3.pente" id="arma3-pente" min="0"></td>
+                            <td><input type="number" name="combate.arma3.falha" id="arma3-falha" min="0"></td>
                         </tr>
                     </tbody>
                 </table>
