--- a/views/partials/ficha/economia.ejs
+++ b/views/partials/ficha/economia.ejs
@@ -8,7 +8,7 @@
         </tr>
         <tr>
             <th>Nível de gasto</th>
-            <td><input type="number" name="nivel-gasto" id="nivel-gasto"></td>
+            <td><input type="number" name="nivelGasto" id="nivel-gasto"></td>
         </tr>
         <tr>
             <th>Dinheiro</th>
