--- a/views/partials/ficha/historia/encontros.ejs
+++ b/views/partials/ficha/historia/encontros.ejs
@@ -1,5 +1,5 @@
 <!-- Encontros -->
 <div class="col-12 col-md-6 mb-3">
     <label for="persona-encon">Encontros com entidades estranhas</label>
-    <textarea class="form-control" id="persona-encon" rows="4" placeholder="Quais pesadelos se tornaram reais..."></textarea>
+    <textarea class="form-control" name="historia.encontros" id="persona-encon" rows="4" placeholder="Quais pesadelos se tornaram reais..."></textarea>
 </div>
