--- a/views/partials/ficha/historia/feridas.ejs
+++ b/views/partials/ficha/historia/feridas.ejs
@@ -1,5 +1,5 @@
 <!-- Ferimentos e Cicatrizes -->
 <div class="col-12 col-md-6 mb-3">
     <label for="persona-feri">Ferimentos e Cicatrizes</label>
-    <textarea class="form-control" id="persona-feri" rows="4" placeholder="Suas feridas e cicatrizes..."></textarea>
+    <textarea class="form-control" name="historia.ferimentos" id="persona-feri" rows="4" placeholder="Suas feridas e cicatrizes..."></textarea>
 </div>
