--- a/views/partials/ficha/historia/locais.ejs
+++ b/views/partials/ficha/historia/locais.ejs
@@ -1,5 +1,5 @@
 <!-- Locais significativos -->
 <div class="col-12 col-md-6 mb-3">
     <label for="persona-loc">Locais significativos</label>
-    <textarea class="form-control" id="persona-loc" rows="4" placeholder="Quais locais lhe são queridos..."></textarea>
+    <textarea class="form-control" name="historia.locais" id="persona-loc" rows="4" placeholder="Quais locais lhe são queridos..."></textarea>
 </div>
