--- a/views/partials/ficha/historia/tracos.ejs
+++ b/views/partials/ficha/historia/tracos.ejs
@@ -1,5 +1,5 @@
 <!-- Traços -->
 <div class="col-12 col-md-6 mb-3">
     <label for="persona-tracos">Traços</label>
-    <textarea class="form-control" id="persona-tracos" rows="4" placeholder="Traços de personalidade..."></textarea>
+    <textarea class="form-control" name="historia.tracos" id="persona-tracos" rows="4" placeholder="Traços de personalidade..."></textarea>
 </div>
