--- a/views/partials/ficha/notas.ejs
+++ b/views/partials/ficha/notas.ejs
@@ -2,6 +2,6 @@
 <div class="container">
     <h3>Notas</h3>
     <div class="container">
-        <textarea class="form-control" id="Notas" placeholder="Coloque aqui o que quiser!" rows="15"></textarea>
+        <textarea class="form-control" name="notas" id="Notas" placeholder="Coloque aqui o que quiser!" rows="15"></textarea>
     </div>
 </div>
