--- a/views/partials/ficha/caracteristicas/estados.ejs
+++ b/views/partials/ficha/caracteristicas/estados.ejs
@@ -15,31 +15,31 @@
         <!-- Insanidade Temporária -->
         <div class="col-12 col-md-2 text-center d-flex align-items-center justify-content-center mb-3 mb-md-0">
             <label for="insan-temp-display" class="me-2">Insanidade Temporária</label>
-            <input type="checkbox" id="insan-temp-display">
+            <input type="checkbox" name="caracteristicas.estados.insanidadeTemp" id="insan-temp-display">
         </div>
 
         <!-- Insanidade Indefinida -->
         <div class="col-12 col-md-2 text-center d-flex align-items-center justify-content-center mb-3 mb-md-0">
             <label for="insan-indef-display" class="me-2">Insanidade Indefinida</label>
-            <input type="checkbox" id="insan-indef-display">
+            <input type="checkbox" name="caracteristicas.estados.insanidadeIndef" id="insan-indef-display">
         </div>
 
         <!-- Lesão Grave -->
         <div class="col-12 col-md-2 text-center d-flex align-items-center justify-content-center mb-3 mb-md-0">
             <label for="lesao-grave-display" class="me-2">Lesão Grave</label>
-            <input type="checkbox" id="lesao-grave-display">
+            <input type="checkbox" name="caracteristicas.estados.lesaoGrave" id="lesao-grave-display">
         </div>
 
         <!-- Inconsciente -->
         <div class="col-12 col-md-2 text-center d-flex align-items-center justify-content-center mb-3 mb-md-0">
             <label for="incons-display" class="me-2">Inconsciente</label>
-            <input type="checkbox" id="incons-display">
+            <input type="checkbox" name="caracteristicas.estados.inconsciente" id="incons-display">
         </div>
 
         <!-- Morrendo -->
         <div class="col-12 col-md-2 text-center d-flex align-items-center justify-content-center">
             <label for="dying-display" class="me-2">Morrendo</label>
-            <input type="checkbox" id="dying-display">
+            <input type="checkbox" name="caracteristicas.estados.morrendo" id="dying-display">
         </div>
     </div>
 </div>
