--- a/views/partials/ficha/historia/descricao.ejs
+++ b/views/partials/ficha/historia/descricao.ejs
@@ -7,5 +7,5 @@
             <!-- Descrição -->
             <div class="col-12 col-md-6 mb-3">
                 <label for="persona-desc">Descrição pessoal</label>
-                <textarea class="form-control" id="persona-desc" rows="4" placeholder="Uma descrição física..."></textarea>
+                <textarea class="form-control" name="historia.descricao" id="persona-desc" rows="4" placeholder="Uma descrição física..."></textarea>
             </div>
