--- a/views/criar.ejs
+++ b/views/criar.ejs
@@ -2,34 +2,34 @@
 
 <body class="bg-image-ficha">
 
-    <form method="POST" action="/criar">
+    <form method="POST" action="<%= formAction %>">
 
-<%- include('./partials/ficha/caracteristicas/informacoes') %>
-<%- include('./partials/ficha/caracteristicas/atributos') %>
-<%- include('./partials/ficha/caracteristicas/caracteristicas') %>
-<%- include('./partials/ficha/caracteristicas/estados') %>
+<%- include('./partials/ficha/caracteristicas/informacoes', {informacoes: sheet?.informacoes}) %>
+<%- include('./partials/ficha/caracteristicas/atributos', {caracteristicas: sheet?.caracteristicas}) %>
+<%- include('./partials/ficha/caracteristicas/caracteristicas', {caracteristicas: sheet?.caracteristicas}) %>
+<%- include('./partials/ficha/caracteristicas/estados', {caracteristicas: sheet?.caracteristicas}) %>
 
-<%- include('./partials/ficha/tab-habilidades') %>
+<%- include('./partials/ficha/tab-habilidades', sheet) %>
 
-<%- include('./partials/ficha/combate/armas') %>
-<%- include('./partials/ficha/combate/combate-valores') %>
+<%- include('./partials/ficha/combate/armas', sheet) %>
+<%- include('./partials/ficha/combate/combate-valores', sheet) %>
 
-<%- include('./partials/ficha/historia/historia') %>
-<%- include('./partials/ficha/historia/descricao') %>
-<%- include('./partials/ficha/historia/tracos') %>
-<%- include('./partials/ficha/historia/crencas') %>
-<%- include('./partials/ficha/historia/feridas') %>
-<%- include('./partials/ficha/historia/pessoas') %>
-<%- include('./partials/ficha/historia/fobias') %>
-<%- include('./partials/ficha/historia/locais') %>
-<%- include('./partials/ficha/historia/feiticos') %>
-<%- include('./partials/ficha/historia/pertences') %>
-<%- include('./partials/ficha/historia/encontros') %>
-<%- include('./partials/ficha/historia/inventario') %>
+<%- include('./partials/ficha/historia/historia', sheet) %>
+<%- include('./partials/ficha/historia/descricao', sheet) %>
+<%- include('./partials/ficha/historia/tracos', sheet) %>
+<%- include('./partials/ficha/historia/crencas', sheet) %>
+<%- include('./partials/ficha/historia/feridas', sheet) %>
+<%- include('./partials/ficha/historia/pessoas', sheet) %>
+<%- include('./partials/ficha/historia/fobias', sheet) %>
+<%- include('./partials/ficha/historia/locais', sheet) %>
+<%- include('./partials/ficha/historia/feiticos', sheet) %>
+<%- include('./partials/ficha/historia/pertences', sheet) %>
+<%- include('./partials/ficha/historia/encontros', sheet) %>
+<%- include('./partials/ficha/historia/inventario', sheet) %>
 
-<%- include('./partials/ficha/economia') %>
+<%- include('./partials/ficha/economia', sheet) %>
 
-<%- include('./partials/ficha/notas') %>
+<%- include('./partials/ficha/notas', sheet) %>
 
 </form>
 
